@@ -1,1 +1,2 @@
-ASDF=url:https://www.asdf.com?expression=%EXPRESSION%&date=%DATE%&field=%FIELD%&dbField=%DBFIELD%;name:Field Action %FIELDNAME%!;category:ip;users:admin,test1;notUsers:test101
+ASDFWISE=url:https://www.asdf.com?expression=%EXPRESSION%&date=%DATE%&field=%FIELD%&dbField=%DBFIELD%;name:Field Action %FIELDNAME%!;category:ip;users:admin,test1;notUsers:test101
+ALLTESTWISE=url:http:/www.example.com;name:AllWiseTest;all:true
